Lots of improvements

--- a/include/simple-mix-comments.tex
+++ b/include/simple-mix-comments.tex
@@ -3,9 +3,9 @@
 \begin{lstlisting}[language=Matlab]
 flip = rand < 0.5
 if flip
-    x = randg + 2
+    x = randg + 2   % Random draw from Gamma(1,1)
 else
-    x = randn
+    x = randn       % Random draw from standard Normal
 end
 \end{lstlisting}
 %\end{alltt}
