--- a/header_beamer.tex
+++ b/header_beamer.tex
@@ -9,7 +9,7 @@
   \setbeamertemplate{navigation symbols}{}
   % Show frame number and author name in footline
   \setbeamertemplate{footline}[frame number]
-  \addtobeamertemplate{footline}{\quad\textcolor{gray}{David Duvenaud and James Lloyd}}{}
+%  \addtobeamertemplate{footline}{\quad\textcolor{gray}{David Duvenaud and James Lloyd}}{}
   % Set frame titles in small capitals
   \setbeamerfont{frametitle}{shape=\scshape,family=\rmfamily}
   \setbeamercolor{frametitle}{bg=gray!60!white,fg=black}
