Now compiles on sagarmatha

--- a/pp_rcc.tex
+++ b/pp_rcc.tex
@@ -17,6 +17,7 @@
 \def\Red{\textcolor{Red}}
 \def\Green{\textcolor{DarkGreen}}
 
+\usepackage{etex}
 \usepackage{alltt}
 \usepackage{psfrag}
 \usepackage{pstool}
